manifests/deployment-ml.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watson-app-ml-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watson-app-ml
  template:
    metadata:
      labels:
        app: watson-app-ml
    spec:
      containers:
      - name: watson-app-ml
        image: rikkyrice/watson-app-ml:
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: watson-app-ml-service
spec:
  selector:
    app: watson-app-ml
  ports:
  - port: 8080
    # targetPort: 80
