manifests/deployment-stt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watson-app-stt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watson-app-stt
  template:
    metadata:
      labels:
        app: watson-app-stt
    spec:
      containers:
      - name: watson-app-stt
        image: rikkyrice/watson-app-stt:
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: watson-app-stt-service
spec:
  selector:
    app: watson-app-stt
  ports:
  - port: 8080
    # targetPort: 80
