manifests/deployment-vr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watson-app-vr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watson-app-vr
  template:
    metadata:
      labels:
        app: watson-app-vr
    spec:
      containers:
      - name: watson-app-vr
        image: rikkyrice/watson-app-vr:
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: watson-app-vr-service
spec:
  selector:
    app: watson-app-vr
  ports:
  - port: 8080
    # targetPort: 80
